--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,24 @@
   "author": "yuyasat",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^0.26.1",
-    "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.16.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-react": "^4.2.0",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "node-sass": "^4.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   }
 }
