--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,1 @@
-{
-  "scripts": {
-    "release": "webpack --config config/webpack.production.js",
-    "build": "webpack --config config/webpack.development.js",
-    "watch": "webpack --watch --config config/webpack.development.js",
-    "start": "react-scripts start",
-    "react-build": "react-scripts build"
-  },
-  "name": "poject",
-  "version": "1.0.0",
-  "description": "poject",
-  "main": "index.js",
-  "repository": {},
-  "author": "yuyasat",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "eslint": "^3.16.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-config-standard-react": "^4.2.0",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "react-scripts": "0.9.1",
-    "webpack": "^2.2.1"
-  },
-  "dependencies": {
-    "lodash": "^4.17.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  }
-}
+../package.json
