--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eslint-plugin-standard": "^3.0.1",
     "react-scripts": "0.9.3",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
-    "coffeescript": "2.0.2",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
